# libical

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  shell.nix
src/: component.rs  duration.rs  errors.rs  lib.rs  property.rs  testdata.rs  testutils.rs  time.rs  timezone.rs  vcalendar.rs  vevent.rs
src/testing/: data.rs  utils.rs
src/utils/: dateutil.rs  fileutil.rs  lock.rs  misc.rs  mod.rs
