[package]
name = "libical"
version = "0.1.0"
authors = [
    "Nora <nora.widdecke@tu-bs.de>",
    "Vincent Breitmoser <look@my.amazin.horse>",
    "Matthias Beyer <mail@beyermatthias.de>"]

description = "Wrapping library around libical-sys"
keywords    = ["ical", "icalendar", "calendar"]
categories  = ["api-bindings"]
readme      = "./README.md"
license     = "LGPL-2.1 OR MPL-2.0"
edition     = "2018"

[dependencies]
chrono       = "0.4"
itertools    = "0.8.0"
log          = "0.4.5"
indoc        = "0.3.1"
atty         = "0.2"
walkdir      = "2.2.7"
ical         = { package = "libical-sys", version = "0.1.1" }
uuid         = { version = "0.8", features = ["v4"] }
fs2          = "0.4.3"
lazy_static  = "1.2.0"

[dev-dependencies]
assert_fs         = "0.13.1"
predicates        = "1.0"
maplit            = "1.0.1"
pretty_assertions = "0.6.1"
tempfile     = "3.0.5"
